Fixed a significant type in latex.css

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -456,7 +456,7 @@ subsubsection[nonum="true"]>sectiontitle:before {
 }
 
 
-subsubsection[open="false"]*> {
+subsubsection[open="false"]>* {
   display: none;
 }
 
