Copied rungfxconv.bash from the Linux tree to OS/X. I was wondering why graphics has been so badly broken for so long.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -42,6 +42,10 @@ table {
 }
 */
 
+button[class="msi"]::-moz-selection{
+  background: blue;
+} 
+
 button[class="msi"]{
   position: relative;
   left: 0px;
