Added a new frame object. Since 'frame' is an existing HTML tag, I had to call it 'ltxframe.' The CSS and XSLT stuff got added. I don't see that it is very useful. Let's discuss it.'

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -1438,6 +1438,10 @@ typewriter {
   font-weight: 300
 }
 
+ltxframe {
+  border: thin solid black;
+}
+
 rtl {
   color: rgb(100,50,0);
   direction: rtl;
