Fix for problems with Math/Text selection in dialog editors; fix for bug that disabled plotting last week; addition of Plot Item properties page to preferences dialog (this isn't quite debugged, but the other changes need to get in).

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -264,7 +264,8 @@ plotwrapper {
   display: block;
 	top: 0;
 	left: 0;
-  text-indent : 0pt;
+  text-indent: 0pt;
+  text-align: center;
   -moz-user-select: all;
   -moz-user-focus: normal;
   cursor: pointer;
