Fix for bugs 2696 and 2697; also two colors in conformal plots and other fixes.

--- a/prince/res/css/latex.css
+++ b/prince/res/css/latex.css
@@ -32,6 +32,11 @@ caption {
 
 table {
   margin: 0px;
+  border-collapse: collapse;
+}
+
+table:focus {
+  border-collapse: separate;
 }
 
 /*table {
