Finished implementing Insert/LaTeX Position Marker which is now the way to put in maketoc, maketitle, etc.

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -421,7 +421,7 @@ button[class="msi"]::-moz-selection, button[class="msi"][selected="true"] {
   background-color: blue;
 }
 
-texb, makelof, makelot, maketitle, maketoc{
+texb, makelof, makelot, maketitle, maketoc, appendix {
   font-family: sans-serif;
   font-style: normal;
   -moz-user-select: all;
