--- a/prince/base/skin/classic/EdInsertTable.css
+++ b/prince/base/skin/classic/EdInsertTable.css
@@ -1,3 +1,7 @@
+@namespace xhtml url(http://www.w3.org/1999/xhtml);
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
+
 *.sizeSelector label {
   width: 2em;
   margin: 0px ! important;
@@ -29,7 +33,7 @@
 #gridcoordinates { visibility: hidden; }
 #tablegrid:hover #gridcoordinates { visibility: visible; }
 
-#BordersPreview table {
+#BordersPreview xhtml|table {
   table-layout: auto;
   empty-cells: show;
   font-size: 100%;
@@ -39,7 +43,7 @@
   border-collapse: collapse;
 }
 
-#BordersPreview td {
+#BordersPreview xhtml|td {
   border: thin solid rgb(187,187,187);
   height: 3em;
   width: 3em;
