Add appearance for numberedLabel and bulletLabel that matches what's there for descriptionLabel.

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -273,6 +273,16 @@ descriptionLabel {
   background-color: #FFFFBB;
 }
 
+numberedLabel {
+  display: inline;
+  background-color: #FFFFBB;
+}
+
+bulletLabel {
+  display: inline;
+  background-color: #FFFFBB;
+}
+
 /* show footnotes by default*/
 note[type="footnote"], node[type="footnote"][hide="false"] {
   display: block;
