Must commit in order to merge

--- a/editor/ui/composer/content/EditorContent.css
+++ b/editor/ui/composer/content/EditorContent.css
@@ -75,7 +75,7 @@ table[empty-cells],
   table:not([border]) > thead > tr > td, table:not([border]) > tbody > tr > td, table:not([border]) > tfoot > tr > td,
   table:not([border]) > thead > tr > th, table:not([border]) > tbody > tr > th, table:not([border]) > tfoot > tr > th
 {
-  border: 1px dotted red;
+  border: 1px solid rgb(230,230,230);
 }
 
 /* give a green dashed border to forms otherwise they are invisible
