Changed table editing interface so you can choose cell-group or table, and depending on which, changes will apply to cells in the cell group, or will apply to all the cells in the table.

--- a/prince/res/css/baselatex.css
+++ b/prince/res/css/baselatex.css
@@ -481,6 +481,23 @@ shortTitle {
   display: none;
 }
 
+body[showshort='true'] shortTitle {
+  display: inline;
+  color: green;
+}
+
+body[showshort='true'] shortTitle:before {
+  content: '[';
+  display: inline;
+  color: green;
+}
+
+body[showshort='true'] shortTitle:after {
+  content: '] ';
+  display: inline;
+  color: green;
+}
+
 msiframe {
   display: block;
 }
